# imageCRUD

./: .flake8  .gitignore  README.md  pyproject.toml
src/: database.py  main.py  producer.py  utils.py
src/logger/: logger.py
src/models/: __init__.py  image_data.py  modify_form.py
src/routers/: images.py
